--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -4,7 +4,7 @@ Die Durchführung dieser Arbeit erfolgte im Rahmen einer Masterarbeit an der Zü
 
 In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein standardisierter Fragebogen anhand der für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten} und \textit{subjektives Wohlbefinden}, sowie der soziodemografischen Daten zusammengestellt. Dazu wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setze sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen und den ausgewählten Erhebungsinstrumenten zusammen. 
 
-\textit{TBD: Versuchsablauf schildern}
+\textit{TBD: Versuchsablauf schildern (Kompletter Fragebogen in den Anhang)}
 
 Die Aufschaltdauer der Umfrage dauerte knapp 5 Monate, von Mitte Januar bis Ende Mai 2018. In diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde anhand der bereinigten Daten die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
 
@@ -13,6 +13,8 @@ Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 
 % ---------------------------------------
 \subsection{Design \& Operationalisiserung} \label{sec:Design}
 Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Die Generierung der Daten für die Beantwortung der Fragestellung erfolgte mittels Internet-Fragebogen. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte.
+
+Begründung des Designs anhand \citeA{sedlmeier2008} S. 84ff.
 
 \subsubsection{Soziodemografische Daten}
 \subsubsection{Medien und Mediennutzung}
